--- a/1.html
+++ b/1.html
@@ -49,7 +49,31 @@
     <main class="content">
         <section class="item">
             <!-- <div class="pic"> -->
-                    <img src="https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=676304001,1029860875&fm=11&gp=0.jpg" alt="">
+            <img src="https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=676304001,1029860875&fm=11&gp=0.jpg"
+                alt="">
+            <!-- </div> -->
+            <div class="txt">
+                <p class="dec"> vue.js从理论精讲到项目实战课程</p>
+                <p class="price">$599.00元</p>
+            </div>
+        </section>
+        <div class="book">
+            <img src="book.png" alt="">
+            <p class="zi">全部课程</p>
+        </div>
+        <section class="item">
+            <div class="pic">
+                <img src="Layer-21.png" alt="">
+            </div>
+            <div class="txt">
+                <p class="dec"> vue.js从理论精讲到项目实战课程</p>
+                <p class="price">$599.00元</p>
+            </div>
+        </section>
+        <section class="item">
+            <!-- <div class="pic"> -->
+            <img src="https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=676304001,1029860875&fm=11&gp=0.jpg"
+                alt="">
             <!-- </div> -->
             <div class="txt">
                 <p class="dec"> vue.js从理论精讲到项目实战课程</p>
@@ -57,24 +81,34 @@
             </div>
         </section>
         <section class="item">
-                <!-- <div class="pic"> -->
-                        <img src="https://ss3.bdstatic.com/70cFv8Sh_Q1YnxGkpoWK1HF6hhy/it/u=2711862120,1073002947&fm=26&gp=0.jpg" alt="">
-                <!-- </div> -->
-                <div class="txt">
-                    <p class="dec"> vue.js从理论精讲到项目实战课程</p>
-                    <p class="price">$599.00元</p>
-                </div>
-            </section>
-            <section class="item">
-                    <!-- <div class="pic"> -->
-                            <img src="https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=676304001,1029860875&fm=11&gp=0.jpg" alt="">
-                    <!-- </div> -->
-                    <div class="txt">
-                        <p class="dec"> vue.js从理论精讲到项目实战课程</p>
-                        <p class="price">$599.00元</p>
-                    </div>
-                </section>
+            <!-- <div class="pic"> -->
+            <img src="http://img1.imgtn.bdimg.com/it/u=2214327023,781750310&fm=26&gp=0.jpg" alt="">
+            <!-- </div> -->
+            <div class="txt">
+                <p class="dec"> vue.js从理论精讲到项目实战课程</p>
+                <p class="price">$599.00元</p>
+            </div>
+
+
+        </section>
+
     </main>
+    <div class="line"></div>
+    <section class="last">
+        <div class="tu">
+            <img src="icon.png" alt="">
+            <p>首页</p>
+        </div>
+        <div class="tu">
+            <img src="iconb.png" alt="">
+            <p>我的课程</p>
+        </div>
+        <div class="tu">
+            <img src="iconq.png" alt="">
+            <p>个人中心</p>
+        </div>
+
+    </section>
     <!--  -->
     <script src="js/swiper.min.js"></script>
     <!-- 引入动态判断rem的脚本 -->
@@ -94,14 +128,14 @@
     <script>
         var mySwiper = new Swiper('.swiper-container', {
             //   direction: 'vertical', // 垂直切换选项
-             // 循环模式选项
-            autoplay: {
-                // 用户操作之后，轮播效果，暂停true，false开启  自动切换，两秒切一次  disableoninteraction 用户操作之后自己播放
-                // 
-                delay: 2000,
-                // stopOnLastSlide: false,
-                disableOnInteraction: false,
-            },
+            // 循环模式选项
+            autoplay: {
+                // 用户操作之后，轮播效果，暂停true，false开启  自动切换，两秒切一次  disableoninteraction 用户操作之后自己播放
+                // 
+                delay: 2000,
+                // stopOnLastSlide: false,
+                disableOnInteraction: false,
+            },
             // 如果需要分页器
             pagination: {
                 el: '.swiper-pagination',
